--- a/public/dashmin/css/style.css
+++ b/public/dashmin/css/style.css
@@ -134,7 +134,7 @@
 .sidebar .navbar .navbar-nav .nav-link:hover,
 .sidebar .navbar .navbar-nav .nav-link.active {
     color: #FFF;
-    background: #009636;
+    background: #5326B6;
     border-color: var(--primary);
 }
 
@@ -144,13 +144,13 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    background: #009636;
+    background: #5326B6;
     border-radius: 40px;
 }
 
 .sidebar .navbar .navbar-nav .nav-link:hover i,
 .sidebar .navbar .navbar-nav .nav-link.active i {
-    background: #009636;
+    background: #5326B6;
 }
 
 .sidebar .navbar .dropdown-toggle::after {
@@ -303,7 +303,7 @@ legend{
   .table thead th {
     color: #FFF;
     font-weight: bold; /* Assure que les en-têtes soient aussi en gras */
-    background-color: #06853b; /* Ajouter une couleur de fond plus visible aux en-têtes */
+    background-color: #5326B6; /* Ajouter une couleur de fond plus visible aux en-têtes */
     border-bottom: 2px solid #dee2e6; /* Bordure plus épaisse entre l'en-tête et le corps du tableau */
 }
 table tbody tr {
@@ -332,7 +332,7 @@ table tbody td {
 }
 
 .thead-table{
-    background-color: #009636; /* Changement de fond pour les boutons de pagination au survol */
+    background-color: #5326B6; /* Changement de fond pour les boutons de pagination au survol */
 }
 .header-separator {
     margin: 0;
@@ -385,8 +385,8 @@ table {
     hr{
     height:10px;
     border-width:0;
-    color:#009636;
-    /* background-color:#009636 */
+    color:#5326B6;
+    /* background-color:#5326B6 */
   }
 .affect.active .subaffect {
     display: block; /* Affiche le sous-menu si l'élément parent est actif */
@@ -418,4 +418,8 @@ table {
     font-size: calc(1.275rem + .3vw);
     text-align: center !important;
     margin-left: 150px;
+}
+.table_color{
+    background-color:#5326B6;
+    color:white;
 }
